--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Ozor - OZOR INSULATION services</title>
+        <title>Constra - Building Construction Website Template</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
@@ -47,9 +47,9 @@
             <div class="row gx-0 align-items-center" style="height: 45px;">
                 <div class="col-lg-6 text-center text-lg-start mb-lg-0">
                     <div class="d-flex flex-wrap">
-                        <a href="#" class="text-muted me-4"><i class="fas fa-map-marker-alt text-secondary me-2"></i>Lebanon</a>
-                        <a href="#" class="text-muted me-4"><i class="fas fa-phone-alt text-secondary me-2"></i>+9613325469</a>
-                        <a href="#" class="text-muted me-0"><i class="fas fa-envelope text-secondary me-2"></i>ozor_trading@hotmail.com</a>
+                        <a href="#" class="text-muted me-4"><i class="fas fa-map-marker-alt text-secondary me-2"></i>Find A Location</a>
+                        <a href="#" class="text-muted me-4"><i class="fas fa-phone-alt text-secondary me-2"></i>+01234567890</a>
+                        <a href="#" class="text-muted me-0"><i class="fas fa-envelope text-secondary me-2"></i>Example@gmail.com</a>
                     </div>
                 </div>
                 <div class="col-lg-6 text-center text-lg-end">
@@ -70,7 +70,7 @@
         <div class="container-fluid sticky-top px-0">
             <nav class="navbar navbar-expand-lg navbar-dark bg-light py-3 px-4">
                 <a href="index.html" class="navbar-brand p-0">
-                    <h2 class="text-secondary display-6"><i class="fas fa-city text-primary me-3"></i>Ozor Insulation Services..</h2>
+                    <h1 class="text-secondary display-6"><i class="fas fa-city text-primary me-3"></i>Constra</h1>
                     <!-- <img src="img/logo.png" alt="Logo"> -->
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -83,7 +83,7 @@
                         <a href="service.html" class="nav-item nav-link">Services</a>
                         <a href="project.html" class="nav-item nav-link">Projects</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown">Other</a>
+                            <a href="#" class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-lg-0">
                                 <a href="feature.html" class="dropdown-item">Our Features</a>
                                 <a href="blog.html" class="dropdown-item">Our Blog</a>
@@ -96,7 +96,7 @@
                     </div>
                     <div class="d-flex align-items-center flex-nowrap pt-3  pt-lg-0 ms-lg-2">
                         <button class="btn btn-primary py-2 px-3" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search"></i></button>
-                        <a href="#" class="btn btn-secondary py-2 px-4 ms-3 flex-wrap flex-sm-shrink-0">WhatsApp</a>
+                        <a href="#" class="btn btn-secondary py-2 px-4 ms-3 flex-wrap flex-sm-shrink-0">Get a Quate</a>
                     </div>
                 </div>
             </nav>
@@ -108,7 +108,7 @@
             <div class="modal-dialog modal-fullscreen">
                 <div class="modal-content rounded-0">
                     <div class="modal-header">
-                        
+                        <h4 class="modal-title mb-0" id="exampleModalLabel">Search by keyword</h4>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body d-flex align-items-center">
@@ -889,10 +889,10 @@
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4">Contact Info</h4>
                             <a href=""><i class="fa fa-map-marker-alt me-2"></i> 123 Street, New York, USA</a>
-                            <a href=""><i class="fas fa-envelope me-2"></i> info@example.com</a>
-                            <a href=""><i class="fas fa-envelope me-2"></i> info@example.com</a>
-                            <a href=""><i class="fas fa-phone me-2"></i> +012 345 67890</a>
-                            <a href="" class="mb-3"><i class="fas fa-print me-2"></i> +012 345 67890</a>
+                            <a href=""><i class="fas fa-envelope me-2"></i> ozor_trading@hotmail.com</a>
+                            <a href=""><i class="fas fa-envelope me-2"></i> ozor_trading@hotmail.com</a>
+                            <a href=""><i class="fas fa-phone me-2"></i> +9613325469</a>
+                            <a href="" class="mb-3"><i class="fas fa-print me-2"></i> +9613325469</a>
                             <div class="footer-btn d-flex align-items-center">
                                 <a class="btn btn-secondary btn-md-square me-2" href=""><i class="fab fa-facebook-f text-white"></i></a>
                                 <a class="btn btn-secondary btn-md-square me-2" href=""><i class="fab fa-twitter text-white"></i></a>
@@ -912,13 +912,13 @@
             <div class="container">
                 <div class="row g-4 align-items-center">
                     <div class="col-md-6 text-center text-md-start mb-md-0">
-                        <span class="text-body"><a href="#" class="border-bottom text-white"><i class="fas fa-copyright text-light me-2"></i>Your Site Name</a>, All right reserved.</span>
+                        <span class="text-body"><a href="#" class="border-bottom text-white"><i class="fas fa-copyright text-light me-2"></i>Ozor Insulation Services</a>, All right reserved.</span>
                     </div>
                     <div class="col-md-6 text-center text-md-end text-body">
                         <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
                         <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
                         <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                        Designed By <a class="border-bottom text-white" href="https://htmlcodex.com">HTML Codex</a>
+                        Designed By <a class="border-bottom text-white" href="https://htmlcodex.com">Ahmad Ozor</a>
                     </div>
                 </div>
             </div>
