--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="container-fluid sticky-top px-0">
             <nav class="navbar navbar-expand-lg navbar-dark bg-light py-3 px-4">
                 <a href="index.html" class="navbar-brand p-0">
-                    <h1 class="text-secondary display-6"><i class="fas fa-city text-primary me-3"></i>OZOR</h1>
+                    <h2 class="text-secondary display-6"><i class="fas fa-city text-primary me-3"></i>Ozor Insulation Services</h2>
                     <!-- <img src="img/logo.png" alt="Logo"> -->
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -889,7 +889,8 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4">Contact Info</h4>
-                            <a href=""><i class="fa fa-map-marker-alt me-2"></i> 123 Street, New York, USA</a>
+                            <a href=""><i class="fa fa-map-marker-alt me-2"></i> 
+                            Lebanin Saidon </a>
                             <a href=""><i class="fas fa-envelope me-2"></i> ozor_trading@hotmail.com</a>
                             <a href=""><i class="fas fa-envelope me-2"></i> ozor_trading@hotmail.com</a>
                             <a href=""><i class="fas fa-phone me-2"></i> +9613325469</a>
