--- a/index.html
+++ b/index.html
@@ -78,17 +78,17 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto pt-2 pt-lg-0">
-                        <a href="index.html" class="nav-item nav-link active">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="service.html" class="nav-item nav-link">Services</a>
-                        <a href="project.html" class="nav-item nav-link">Projects</a>
+                        <a href="" class="nav-item nav-link active">Home</a>
+                        <a href="" class="nav-item nav-link">About</a>
+                        <a href="" class="nav-item nav-link">Services</a>
+                        <a href="" class="nav-item nav-link">Projects</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-lg-0">
                                 <a href="feature.html" class="dropdown-item">Our Features</a>
-                                <a href="blog.html" class="dropdown-item">Our Blog</a>
-                                <a href="team.html" class="dropdown-item">Our Team</a>
-                                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                                <a href="" class="dropdown-item">Our Blog</a>
+                                <a href="" class="dropdown-item">Our Team</a>
+                                <a href="" class="dropdown-item">Testimonial</a>
                                 
                             </div>
                         </div>
