--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-lg-0">
-                                <a href="feature.html" class="dropdown-item">Our Features</a>
+                                <a href="" class="dropdown-item">Our Features</a>
                                 <a href="" class="dropdown-item">Our Blog</a>
                                 <a href="" class="dropdown-item">Our Team</a>
                                 <a href="" class="dropdown-item">Testimonial</a>
                                 
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        <a href="" class="nav-item nav-link">Contact</a>
                     </div>
                     <div class="d-flex align-items-center flex-nowrap pt-3  pt-lg-0 ms-lg-2">
                         <button class="btn btn-primary py-2 px-3" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search"></i></button>
